seperated content upload from creation
